[package]
name = "warp-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["macros", "sync"] }
warp = "0.3.2"
serde = {version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
futures = { version = "0.3.21", default-features = false }
uuid = { version = "0.8.2", features = ["serde", "v4"] }