[package]
name = "warp-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3.2"
tokio-stream = "0.1.8"
futures = "0.3.21"
uuid = { version = "0.8.2", features = ["serde", "v4"] }